chore(test) : front end test         - Setup jest for frontend test         - Redux actions test         - Redux reducer test         - Setup enzyme for components test         - Components test         - Setup Selenium and Nightwatch for e2e test         - e2e test [Delivers #159972754]
