# server/middlewares/validate/orders.js
@@ -30,9 +30,13 @@ function validateOrder(req, res, next) {
   // check meals content
   const meals = [...newOrder.meals];
   meals.forEach((meal) => {
+    let unitPrice;
+    (meal.cost) && (unitPrice = meal.cost);
+    (meal.unitPrice) && ({ unitPrice } = meal);
+
     if (meal.id === '' || meal.id === undefined ||
     meal.portion === '' || meal.portion === undefined || parseInt(meal.portion, 10) === 0 || isNaN(meal.portion) ||
-    meal.price === '' || meal.price === undefined || parseInt(meal.price, 10) === 0 || isNaN(meal.price)
+    unitPrice === '' || unitPrice === undefined || parseInt(unitPrice, 10) === 0 || isNaN(unitPrice)
     ) {
       const err = new Error('meal entry is not correct');
       err.status = 400;
